--- a/frontend/frontend/src/app/components/add-book/add-book.component.html
+++ b/frontend/frontend/src/app/components/add-book/add-book.component.html
@@ -1,1 +1,10 @@
-<p>add-book works!</p>
+<form #addbook = "ngForm" (ngSubmit) = "onSubmit(addbook.value)">
+  <label for="name">Title</label>
+  <input type="text" name="name" id="name" placeholder="Title" ngModel>
+  <br>
+
+  <label for="description">Description</label>
+  <input type="text" name="description" id="description" placeholder="Desciption..." ngModel>
+
+  <button type="submit" value="submit">Submit</button>
+</form>
