--- a/frontend/frontend/src/app/components/login/login.component.html
+++ b/frontend/frontend/src/app/components/login/login.component.html
@@ -1,32 +1,10 @@
-<link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
-<script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
-<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<form  #userlogin = "ngForm" (ngSubmit) = "onSubmit(userlogin.value)">
+  <label for="username">Username</label>
+  <input type="text" id="username" name="username" placeholder="Username" ngModel>
+  <br>
 
-<body>
-    <div id="login">
-        <h3 class="text-center text-white pt-5">Login form</h3>
-        <div class="container">
-            <div id="login-row" class="row justify-content-center align-items-center">
-                <div id="login-column" class="col-md-6">
-                    <div id="login-box" class="col-md-12">
-                        <form id="login-form" class="form" [formGroup]="loginForm" (ngSubmit)="login()">
-                            <h3 class="text-center text-info">Login</h3>
-                            <div class="form-group">
-                                <label for="username" class="text-info" >Username:</label><br>
-                                <input type="text" name="username" id="username" class="form-control" formControlName="username">
-                            </div>
-                            <div class="form-group">
-                                <label for="password" class="text-info">Password:</label><br>
-                                <input type="text" name="password" id="password" class="form-control" formControlName="password">
-                            </div>
-                            <button class="button" type="submit">Login</button>
-                            <div id="register-link" class="text-right">
-                                <a href="#" class="text-info">Register here</a>
-                            </div>
-                        </form>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</body>
+  <label for="password">Password</label>
+  <input type="password" id="password" name="password" placeholder="Password" ngModel>
+
+  <button type="submit" value="submit">Submit</button>
+</form>
