Added new components

--- a/frontend/frontend/src/app/components/add-book/add-book.component.html
+++ b/frontend/frontend/src/app/components/add-book/add-book.component.html
@@ -1,3 +1,4 @@
+<app-header></app-header>
 <form #addbook = "ngForm" (ngSubmit) = "onSubmit(addbook.value)">
   <label for="name">Title</label>
   <input type="text" name="name" id="name" placeholder="Title" ngModel>
