Added functionality in frontend for Requests and Books

--- a/frontend/frontend/src/app/components/header/header.component.html
+++ b/frontend/frontend/src/app/components/header/header.component.html
@@ -8,11 +8,17 @@
       <li class="nav-item">
         <a class="nav-link" href="/books">Books</a>
       </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Requests</a>
+      <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" href="/requests" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          Requests
+        </a>
+        <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+          <a class="dropdown-item" href="/requests">All Requests</a>
+          <a class="dropdown-item" href="#">My Requests</a>
+        </div>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Trades</a>
+        <a class="nav-link" href="/trades">Trades</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="/users">Users</a>
