--- a/frontend/frontend/src/app/components/edit-profile/edit-profile.component.html
+++ b/frontend/frontend/src/app/components/edit-profile/edit-profile.component.html
@@ -18,5 +18,5 @@
   <label for="state">State</label>
   <input type="text" [(ngModel)] = "user.state" name="state" placeholder="{{user.state}}" ngModel>
   <br>
-<button type="submit">Save changes</button>
+<button type="submit" value="submiy">Save changes</button>
 </form>
