--- a/frontend/frontend/src/app/components/login/login.component.html
+++ b/frontend/frontend/src/app/components/login/login.component.html
@@ -1,10 +1,19 @@
-<form  #userlogin = "ngForm" (ngSubmit) = "onSubmit(userlogin.value)">
-  <label for="username">Username</label>
-  <input type="text" id="username" name="username" placeholder="Username" ngModel>
-  <br>
+<h1>Book Trading Club</h1>
+<form class="text-center border border-light p-5" #userlogin = "ngForm" (ngSubmit) = "onSubmit(userlogin.value)">
 
-  <label for="password">Password</label>
-  <input type="password" id="password" name="password" placeholder="Password" ngModel>
+  <p class="h4 mb-4">Sign in</p>
 
-  <button type="submit" value="submit">Submit</button>
+  <input type="text" id="username" name="username" class="form-control mb-4" placeholder="Username" ngModel>
+
+  <!-- Password -->
+  <input type="password" id="password" name="password" class="form-control mb-4" placeholder="Password" ngModel>
+
+  <!-- Sign in button -->
+  <button mdbBtn color="btn-primary" block="true" class="my-4" type="submit">Sign in</button>
+
+  <!-- Register -->
+  <p>Not a member?
+    <a routerLink="/register">Register</a>
+  </p>
+
 </form>
