--- a/frontend/frontend/src/app/components/add-book/add-book.component.html
+++ b/frontend/frontend/src/app/components/add-book/add-book.component.html
@@ -1,11 +1,38 @@
 <app-header></app-header>
-<form #addbook = "ngForm" (ngSubmit) = "onSubmit(addbook.value)">
-  <label for="name">Title</label>
-  <input type="text" name="name" id="name" placeholder="Title" ngModel>
-  <br>
-
-  <label for="description">Description</label>
-  <input type="text" name="description" id="description" placeholder="Desciption..." ngModel>
-
-  <button type="submit" value="submit">Submit</button>
-</form>
+<div class="container">
+  <div class="row gutters">
+    <div class="col-xl-3 col-lg-3 col-md-12 col-sm-12 col-12">
+      <div class="card h-100">
+        <div class="card-body">
+          <form #addbook="ngForm" (ngSubmit)="onSubmit(addbook.value)">
+            <div class="col-xl-6 col-lg-6 col-md-6 col-sm-6 col-12">
+              <div class="form-group">
+                <label for="name">Title</label>
+                <input type="text" name="name" id="name" placeholder="Title" ngModel>
+              </div>
+            </div>
+            <div class="col-xl-6 col-lg-6 col-md-6 col-sm-6 col-12">
+              <div class="form-group">
+                <label for="description">Description</label>
+                <input type="text" name="description" id="description" placeholder="Desciption..." ngModel>
+              </div>
+            </div>
+            <div class="col-xl-6 col-lg-6 col-md-6 col-sm-6 col-12">
+              <div class="form-group">
+                <label for="img">Image Url</label>
+                <input type="text" name="img" id="img" placeholder="url..." ngModel>
+              </div>
+            </div>
+            <div class="row gutters">
+              <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12">
+                <div class="text-right">
+                  <button type="submit" value="submit" class="btn btn-primary">Submit</button>
+                </div>
+              </div>
+            </div>
+          </form>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
