--- a/frontend/frontend/src/app/components/book/book.component.html
+++ b/frontend/frontend/src/app/components/book/book.component.html
@@ -1,23 +1,37 @@
 <app-header></app-header>
-<div class="card my-5">
-  <div class="card-body">
-    <table class="table table-bordered table-striped">
-      <thead class="thead-dark">
-        <tr>
-          <th scope="col">Name</th>
-          <th scope="col">Description</th>
-          <th scope="col">Owner</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr *ngFor="let book of books">
-          <td>{{ book.name }}</td>
-          <td>{{ book.description }}</td>
-          <td>{{ book.owner.username }}</td>
-        </tr>
-      </tbody>
-    </table>
-  </div>
-  <button routerLink="/createRequest">Make new request</button>
-</div>
 
+<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
+<div class="container">
+  <div class="row">
+    <div class="col-md-3" *ngFor="let book of books">
+      <div class="ibox">
+        <div class="ibox-content product-box">
+          <div class="product-imitation" style="background-image:url('{{book.imgUrl}}'); background-size: auto 100%;">
+          </div>
+          <div class="product-desc">
+            <span class="product-price">
+              {{book.status}}
+            </span>
+            <h5 class="product-name"> {{book.name}}</h5>
+            <div class="small m-t-xs">
+              {{book.description}}
+            </div>
+            <hr>
+            <div class="small m-t-xs">
+              Owner: {{book.owner.username}}
+            </div>
+            <br>
+            <div class="m-t text-righ grid">
+              <div class="row">
+                <div class="col"><a href="https://www.google.com/search?q={{book.name}}"
+                    class="btn btn-xs btn-outline btn-primary">More Info <i class="fa fa-long-arrow-right"></i> </a>
+                </div>
+                <div class="col"><a class="btn btn-xs btn-outline btn-primary" href="/createRequest">Request</a> </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
