--- a/frontend/frontend/src/app/components/edit-book/edit-book.component.html
+++ b/frontend/frontend/src/app/components/edit-book/edit-book.component.html
@@ -1,11 +1,45 @@
 <app-header></app-header>
-<h4>Editing: {{book.name}}</h4>
-<form #editbook = "ngForm" (ngSubmit) = "onSubmit(editbook.value)">
-  <label for="name">Title</label>
-  <input type="text" [(ngModel)] = "book.name" name="name" id="name"  placeholder={{book.name}} ngModel>
-  <br>
-  <label for="description">Description</label>
-  <input type="text" [(ngModel)] = "book.description" name="description" id="description" placeholder="{{book.description}}">
-  <br>
-  <button type="submit" value="submit">Save changes</button>
-</form>
+
+<div class="container bootstrap snippets bootdey">
+  <h1 class="text-primary"><span class="glyphicon glyphicon-user"></span>Edit Book</h1>
+  <hr>
+  <div class="row">
+    <!-- left column -->
+    <div class="col-md-3">
+      <div class="text-center">
+        <img src="{{book.imgUrl}}" class="img-fluid">
+      </div>
+    </div>
+
+    <!-- edit form column -->
+    <div class="col-md-9 personal-info">
+      <h3>Information</h3>
+
+      <form class="form-horizontal" role="form" #editbook="ngForm" (ngSubmit)="onSubmit(editbook.value)">
+        <div class="form-group">
+          <label class="col-lg-3 control-label">Name:</label>
+          <div class="col-lg-8">
+            <input class="form-control" type="text" [(ngModel)]="book.name" placeholder="{{book.name}}" name="name"
+              ngModel>
+          </div>
+        </div>
+        <div class="form-group">
+          <label class="col-lg-3 control-label">Description:</label>
+          <div class="col-lg-8">
+            <input class='form-control' type="text" [(ngModel)]="book.description" placeholder="{{book.description}}"
+              name="description" ngModel>
+          </div>
+        </div>
+        <div class="form-group">
+          <label class="col-lg-3 control-label">Url:</label>
+          <div class="col-lg-8">
+            <input class='form-control' type="text" [(ngModel)]="book.imgUrl" placeholder="{{book.imgUrl}}"
+              name="imgUrl" ngModel>
+          </div>
+        </div>
+        <button class='btn btn-primary' type="submit" value="submit">Save changes</button>
+      </form>
+    </div>
+  </div>
+</div>
+<hr>
