--- a/frontend/frontend/src/app/components/edit-profile/edit-profile.component.html
+++ b/frontend/frontend/src/app/components/edit-profile/edit-profile.component.html
@@ -1,22 +1,66 @@
 <app-header></app-header>
-<form *ngIf="user" #useredit = "ngForm" (ngSubmit) = "onSubmit(useredit.value)">
 
-  <h4>{{user.username}}</h4>
+<div class="container bootstrap snippets bootdey">
+  <h1 class="text-primary"><span class="glyphicon glyphicon-user"></span>Edit Profile</h1>
+  <hr>
+  <div class="row">
+    <!-- left column -->
+    <div class="col-md-3">
+      <div class="text-center">
+        <img src="//placehold.it/100" class="avatar img-circle" alt="avatar">
+        <h6>Upload a different photo...</h6>
+        <input type="file" class="form-control">
+      </div>
+    </div>
 
-  <label for="fullName">Full name</label>
-  <input type="text" [(ngModel)] = "user.fullName" placeholder="{{user.fullName}}" name="fullName" ngModel>
-  <br>
+    <!-- edit form column -->
+    <div class="col-md-9 personal-info">
+      <!-- <div class="alert alert-info alert-dismissable">
+        <a class="panel-close close" data-dismiss="alert">×</a>
+        <i class="fa fa-coffee"></i>
+        This is an <strong>.alert</strong>. editing the user profile.
+      </div> -->
+      <h3>Information</h3>
 
-  <label for="city">City</label>
-  <input type="text" [(ngModel)] = "user.city" name="city" placeholder="{{user.city}}" ngModel>
-  <br>
-
-  <label for="address">Address</label>
-  <input type="text" [(ngModel)] = "user.address" name="address" placeholder="{{user.address}}" ngModel>
-  <br>
-
-  <label for="state">State</label>
-  <input type="text" [(ngModel)] = "user.state" name="state" placeholder="{{user.state}}" ngModel>
-  <br>
-<button type="submit" value="submiy">Save changes</button>
-</form>
+      <form class="form-horizontal" role="form" *ngIf="user" #useredit="ngForm" (ngSubmit)="onSubmit(useredit.value)">
+        <div class="form-group">
+          <label class="col-lg-3 control-label">Username:</label>
+          <div class="col-lg-8">
+            <input class="form-control" type="text" [(ngModel)]="user.username" placeholder="{{user.fullName}}"
+              name="fullName" ngModel>
+          </div>
+        </div>
+        <div class="form-group">
+          <label class="col-lg-3 control-label">Full Name:</label>
+          <div class="col-lg-8">
+            <input class='form-control' type="text" [(ngModel)]="user.fullName" placeholder="{{user.fullName}}"
+              name="fullName" ngModel>
+          </div>
+        </div>
+        <div class="form-group">
+          <label class="col-lg-3 control-label">State:</label>
+          <div class="col-lg-8">
+            <input class="form-control" type="text" [(ngModel)]="user.state" name="state" placeholder="{{user.state}}"
+              ngModel>
+          </div>
+        </div>
+        <div class="form-group">
+          <label class="col-lg-3 control-label">City:</label>
+          <div class="col-lg-8">
+            <input class="form-control" type="text" [(ngModel)]="user.city" name="city" placeholder="{{user.city}}"
+              ngModel>
+          </div>
+        </div>
+        <div class="form-group">
+          <label class="col-lg-3 control-label">Address:</label>
+          <div class="col-lg-8">
+            <input class='form-control' type="text" [(ngModel)]="user.address" name="address"
+              placeholder="{{user.address}}" ngModel>
+          </div>
+        </div>
+        <button class='btn btn-primary' type="submit" value="submiy">Save changes</button>
+      </form>
+    </div>
+  </div>
+</div>
+<hr>
