--- a/frontend/frontend/src/app/components/login/login.component.html
+++ b/frontend/frontend/src/app/components/login/login.component.html
@@ -1,19 +1,36 @@
 <h1>Book Trading Club</h1>
-<form class="text-center border border-light p-5" #userlogin = "ngForm" (ngSubmit) = "onSubmit(userlogin.value)">
 
-  <p class="h4 mb-4">Sign in</p>
+<div class="cotainer">
+  <div class="row justify-content-center">
+    <div class="col-md-8">
+      <div class="card">
+        <div class="card-header">Login</div>
+        <div class="card-body">
+          <form class="text-center border border-light p-5" #userlogin="ngForm" (ngSubmit)="onSubmit(userlogin.value)">
+            <div class="form-group row">
+              <label for="username" class="col-md-4 col-form-label text-md-right">Username</label>
+              <div class="col-md-6">
+                <input type="text" id="username" name="username" class="form-control mb-4" placeholder="Username"
+                  ngModel>
+              </div>
+            </div>
+            <!-- Password -->
+            <div class="form-group row">
+              <label for="password" class="col-md-4 col-form-label text-md-right">Password</label>
+              <div class="col-md-6">
+                <input type="password" id="password" name="password" class="form-control mb-4" ngModel>
+              </div>
+            </div>
+            <!-- Sign in button -->
+            <div class="col-md-6 offset-md-4">
+              <button class="btn btn-primary my-4" block="true" type="submit">Sign in</button>
+              <br>
+              <a routerLink="/register">Register</a>
+            </div>
 
-  <input type="text" id="username" name="username" class="form-control mb-4" placeholder="Username" ngModel>
-
-  <!-- Password -->
-  <input type="password" id="password" name="password" class="form-control mb-4" placeholder="Password" ngModel>
-
-  <!-- Sign in button -->
-  <button mdbBtn color="btn-primary" block="true" class="my-4" type="submit">Sign in</button>
-
-  <!-- Register -->
-  <p>Not a member?
-    <a routerLink="/register">Register</a>
-  </p>
-
-</form>
+          </form>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
