--- a/frontend/frontend/src/app/components/requests/request.component.html
+++ b/frontend/frontend/src/app/components/requests/request.component.html
@@ -1,22 +1,41 @@
 <app-header></app-header>
-<div class="card my-5">
-  <div class="card-body">
-    <table class="table table-bordered table-striped">
-      <thead class="thead-dark">
-        <tr>
-          <th scope="col">Offer from</th>
-          <th scope="col">Offer to</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr *ngFor="let r of requests">
-          <td>{{ r.userRequesting.username }} | {{ r.bookToGive.name }}</td>
-          <td>{{ r.userReceiving.username }}  | {{ r.wantedBook.name }}</td>
 
-          <td *ngIf="r.userReceiving.username == user.username">
-            <button class="bt btn-primary" (click)="accept(r.requestId)">Accept</button></td>
-        </tr>
-      </tbody>
-    </table>
+
+
+<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
+<div class="container pb-5 mb-2">
+  <!--  Item-->
+  <div class="cart-item d-md-flex justify-content-between" *ngFor="let r of requests">
+    <div class="px-3 my-3">
+      <a class="cart-item-product" href="https://www.google.com/search?q={{r.bookToGive.name}}">
+        <div class="cart-item-product-thumb"><img src="{{r.bookToGive.imgUrl}}" alt="Product"></div>
+        <div class="cart-item-product-info">
+          <h4 class="cart-item-product-title">{{r.bookToGive.name}}</h4><span><strong>Description:
+            </strong>{{r.bookToGive.description}}
+          </span>
+        </div>
+      </a>
+    </div>
+    <div class="px-3 my-3 text-center">
+      <a class="cart-item-product" href="https://www.google.com/search?q={{r.wantedBook.name}}">
+        <div class="cart-item-product-thumb"><img src="{{r.wantedBook.imgUrl}}" alt="Product"></div>
+        <div class="cart-item-product-info">
+          <h4 class="cart-item-product-title">{{r.wantedBook.name}}</h4><span><strong>Description:
+            </strong>{{r.wantedBook.description}}
+          </span>
+        </div>
+      </a>
+    </div>
+
+    <div class="px-3 my-3 text-center">
+      <div class="cart-item-label">From: </div><span
+        class="text-xl font-weight-medium">{{r.bookToGive.owner.fullName}}</span>
+    </div>
+    <div class="px-3 my-3 text-center">
+      <div class="cart-item-label">To: </div><span
+        class="text-xl font-weight-medium">{{r.wantedBook.owner.fullName}}</span>
+    </div>
   </div>
+
 </div>
+
