--- a/frontend/frontend/src/app/components/register/register.component.html
+++ b/frontend/frontend/src/app/components/register/register.component.html
@@ -35,14 +35,14 @@
               <label for="username" class="col-md-4 col-form-label text-md-right">Username</label>
               <div class="col-md-6">
                 <input type="text" id="username" name="username" class="form-control mb-4" placeholder="Username"
-                  ngModel>
+                  ngModel required>
               </div>
             </div>
             <!-- Password -->
             <div class="form-group row">
               <label for="password" class="col-md-4 col-form-label text-md-right">Password</label>
               <div class="col-md-6">
-                <input type="password" id="password" name="password" class="form-control mb-4" ngModel>
+                <input type="password" id="password" name="password" class="form-control mb-4" ngModel required>
               </div>
             </div>
             <!--Full Name-->
