--- a/frontend/frontend/src/app/components/edit-profile/edit-profile.component.html
+++ b/frontend/frontend/src/app/components/edit-profile/edit-profile.component.html
@@ -24,10 +24,8 @@
 
       <form class="form-horizontal" role="form" *ngIf="user" #useredit="ngForm" (ngSubmit)="onSubmit(useredit.value)">
         <div class="form-group">
-          <label class="col-lg-3 control-label">Username:</label>
           <div class="col-lg-8">
-            <input class="form-control" type="text" [(ngModel)]="user.username" placeholder="{{user.fullName}}"
-              name="fullName" ngModel>
+            <label class="col-lg-3 control-label">{{user.username}}</label>
           </div>
         </div>
         <div class="form-group">
