--- a/frontend/frontend/src/app/components/users/users.component.css
+++ b/frontend/frontend/src/app/components/users/users.component.css
@@ -1,4 +1,4 @@
-body{
+/* body{
   background:#DCDCDC;
   margin-top:20px;
 }
@@ -9,21 +9,9 @@ body{
   background-color: #fff;
 }
 
-.social-links li a {
-  border-radius: 50%;
-  color: rgba(121, 121, 121, .8);
-  display: inline-block;
-  height: 30px;
-  line-height: 27px;
-  border: 2px solid rgba(121, 121, 121, .5);
-  text-align: center;
-  width: 30px
-}
 
-.social-links li a:hover {
-  color: #797979;
-  border: 2px solid #797979
-}
+
+
 .thumb-lg {
   height: 88px;
   width: 88px;
@@ -48,4 +36,196 @@ body{
 h4 {
   line-height: 22px;
   font-size: 18px;
+} */
+
+.social-links li a:hover {
+  color: #797979;
+  border: 2px solid #797979
+}
+.social-links li a {
+  border-radius: 50%;
+  color: rgba(121, 121, 121, .8);
+  display: inline-block;
+  height: 30px;
+  line-height: 27px;
+  border: 2px solid rgba(121, 121, 121, .5);
+  text-align: center;
+  width: 30px
+}
+
+body{
+  background-color: #f8f9fa!important
+}
+.p-4 {
+  padding: 1.5rem!important;
+}
+.mb-0, .my-0 {
+  margin-bottom: 0!important;
+}
+.shadow-sm {
+  box-shadow: 0 .125rem .25rem rgba(0,0,0,.075)!important;
+}
+
+/* user-dashboard-info-box */
+.user-dashboard-info-box .candidates-list .thumb {
+  margin-right: 20px;
+}
+.user-dashboard-info-box .candidates-list .thumb img {
+  width: 80px;
+  height: 80px;
+  -o-object-fit: cover;
+  object-fit: cover;
+  overflow: hidden;
+  border-radius: 50%;
+}
+
+.user-dashboard-info-box .title {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  padding: 30px 0;
+}
+
+.user-dashboard-info-box .candidates-list td {
+  vertical-align: middle;
+}
+
+.user-dashboard-info-box td li {
+  margin: 0 4px;
+}
+
+.user-dashboard-info-box .table thead th {
+  border-bottom: none;
+}
+
+.table.manage-candidates-top th {
+  border: 0;
+}
+
+.user-dashboard-info-box .candidate-list-favourite-time .candidate-list-favourite {
+  margin-bottom: 10px;
+}
+
+.table.manage-candidates-top {
+  min-width: 650px;
+}
+
+.user-dashboard-info-box .candidate-list-details ul {
+  color: #969696;
+}
+
+/* Candidate List */
+.candidate-list {
+  background: #ffffff;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  border-bottom: 1px solid #eeeeee;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  padding: 20px;
+  -webkit-transition: all 0.3s ease-in-out;
+  transition: all 0.3s ease-in-out;
+}
+.candidate-list:hover {
+  -webkit-box-shadow: 0px 0px 34px 4px rgba(33, 37, 41, 0.06);
+  box-shadow: 0px 0px 34px 4px rgba(33, 37, 41, 0.06);
+  position: relative;
+  z-index: 99;
+}
+.candidate-list:hover a.candidate-list-favourite {
+  color: #e74c3c;
+  -webkit-box-shadow: -1px 4px 10px 1px rgba(24, 111, 201, 0.1);
+  box-shadow: -1px 4px 10px 1px rgba(24, 111, 201, 0.1);
+}
+
+.candidate-list .candidate-list-image {
+  margin-right: 25px;
+  -webkit-box-flex: 0;
+  -ms-flex: 0 0 80px;
+  flex: 0 0 80px;
+  border: none;
+}
+.candidate-list .candidate-list-image img {
+  width: 80px;
+  height: 80px;
+  -o-object-fit: cover;
+  object-fit: cover;
+}
+
+.candidate-list-title {
+  margin-bottom: 5px;
+}
+
+.candidate-list-details ul {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap;
+  margin-bottom: 0px;
+}
+.candidate-list-details ul li {
+  margin: 5px 10px 5px 0px;
+  font-size: 13px;
+}
+
+.candidate-list .candidate-list-favourite-time {
+  margin-left: auto;
+  text-align: center;
+  font-size: 13px;
+  -webkit-box-flex: 0;
+  -ms-flex: 0 0 90px;
+  flex: 0 0 90px;
+}
+.candidate-list .candidate-list-favourite-time span {
+  display: block;
+  margin: 0 auto;
+}
+.candidate-list .candidate-list-favourite-time .candidate-list-favourite {
+  display: inline-block;
+  position: relative;
+  height: 40px;
+  width: 40px;
+  line-height: 40px;
+  border: 1px solid #eeeeee;
+  border-radius: 100%;
+  text-align: center;
+  -webkit-transition: all 0.3s ease-in-out;
+  transition: all 0.3s ease-in-out;
+  margin-bottom: 20px;
+  font-size: 16px;
+  color: #646f79;
+}
+.candidate-list .candidate-list-favourite-time .candidate-list-favourite:hover {
+  background: #ffffff;
+  color: #e74c3c;
+}
+
+.candidate-banner .candidate-list:hover {
+  position: inherit;
+  -webkit-box-shadow: inherit;
+  box-shadow: inherit;
+  z-index: inherit;
+}
+
+.bg-white {
+  background-color: #ffffff !important;
+}
+.p-4 {
+  padding: 1.5rem!important;
+}
+.mb-0, .my-0 {
+  margin-bottom: 0!important;
+}
+.shadow-sm {
+  box-shadow: 0 .125rem .25rem rgba(0,0,0,.075)!important;
+}
+
+.user-dashboard-info-box .candidates-list .thumb {
+  margin-right: 20px;
 }
