--- a/frontend/frontend/src/app/components/users/users.component.html
+++ b/frontend/frontend/src/app/components/users/users.component.html
@@ -1,12 +1,10 @@
 <app-header></app-header>
-
+<!--
 <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
 <div class="content">
   <div class="container">
     <div class="row">
-      <!-- end col -->
     </div>
-    <!-- end row -->
     <div class="row">
       <div class="col-lg-4" *ngFor="let u of users">
         <div class="text-center card-box">
@@ -55,8 +53,80 @@
         </div>
       </div>
 
-      <!-- end col -->
+
     </div>
   </div>
-  <!-- container -->
+</div> -->
+
+
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.1/css/all.min.css" integrity="sha256-2XFplPlrFClt0bIdPgpz8H7ojnk10H69xRqd9+uTShA=" crossorigin="anonymous" />
+<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
+<div class="container mt-3 mb-4">
+<div class="col-lg-9 mt-4 mt-lg-0">
+    <div class="row">
+      <div class="col-md-12">
+        <div class="user-dashboard-info-box table-responsive mb-0 bg-white p-4 shadow-sm">
+          <table class="table manage-candidates-top mb-0">
+            <thead>
+              <tr>
+                <th>User</th>
+                <th class="text-center"> </th>
+                <th class="action text-right"> </th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr class="candidates-list" *ngFor="let u of users">
+                <td class="title">
+                  <div class="thumb">
+                    <img class="img-fluid" src="https://upload.wikimedia.org/wikipedia/commons/7/7c/Profile_avatar_placeholder_large.png" alt="">
+                  </div>
+                  <div class="candidate-list-details">
+                    <div class="candidate-list-info">
+                      <div class="candidate-list-title">
+                        <h5 class="mb-0"><a href="#">{{u.fullName}}</a></h5>
+                      </div>
+                      <div class="candidate-list-option">
+                        <ul class="list-unstyled">
+                          <li><i class="fas fa-filter pr-1"></i>{{u.username}}</li>
+                          <li><i class="fas fa-map-marker-alt pr-1"></i>{{u.state}}, {{u.city}} {{u.address}}</li>
+                        </ul>
+                      </div>
+                    </div>
+                  </div>
+                </td>
+                <td class="candidate-list-favourite-time text-center">
+                  <button type="button"
+              class="btn btn-primary mt-3 btn-rounded waves-effect w-md waves-light">{{u.username}}'s Books</button>
+                </td>
+                <td>
+                  <ul class="social-links list-inline">
+                    <li class="list-inline-item"><a title="" data-placement="top" data-toggle="tooltip" class="tooltips"
+                        href="" data-original-title="Facebook"><i class="fa fa-facebook"></i></a></li>
+                    <li class="list-inline-item"><a title="" data-placement="top" data-toggle="tooltip" class="tooltips"
+                        href="" data-original-title="Twitter"><i class="fa fa-twitter"></i></a></li>
+                    <li class="list-inline-item"><a title="" data-placement="top" data-toggle="tooltip" class="tooltips"
+                        href="" data-original-title="Skype"><i class="fa fa-skype"></i></a></li>
+                  </ul>
+                </td>
+              </tr>
+
+
+
+            </tbody>
+          </table>
+          <div class="text-center mt-3 mt-sm-3">
+            <ul class="pagination justify-content-center mb-0">
+              <li class="page-item disabled"> <span class="page-link">Prev</span> </li>
+              <li class="page-item active" aria-current="page"><span class="page-link">1 </span> <span class="sr-only">(current)</span></li>
+              <li class="page-item"><a class="page-link" href="#">2</a></li>
+              <li class="page-item"><a class="page-link" href="#">3</a></li>
+              <li class="page-item"><a class="page-link" href="#">...</a></li>
+              <li class="page-item"><a class="page-link" href="#">25</a></li>
+              <li class="page-item"> <a class="page-link" href="#">Next</a> </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
