--- a/frontend/frontend/src/app/components/add-book/add-book.component.html
+++ b/frontend/frontend/src/app/components/add-book/add-book.component.html
@@ -1,4 +1,4 @@
-<app-header></app-header>
+<!-- <app-header></app-header>
 <div class="container">
   <div class="row gutters">
     <div class="col-xl-3 col-lg-3 col-md-12 col-sm-12 col-12">
@@ -35,4 +35,47 @@
       </div>
     </div>
   </div>
+</div> -->
+
+
+<app-header></app-header>
+
+<div class="cotainer">
+  <div class="row justify-content-center">
+    <div class="col-md-8">
+      <div class="card">
+        <div class="card-header"> Add Book</div>
+        <div class="card-body">
+          <form #addbook="ngForm" (ngSubmit)="onSubmit(addbook.value)">
+            <div class="col-md-6 graphicdesign illustrator photography">
+              <div class="form-group">
+                <label for="name">Title</label>
+                <input type="text" name="name" id="name" placeholder="Title" ngModel>
+              </div>
+            </div>
+            <div class="col-md-6 graphicdesign illustrator photography">
+              <div class="form-group">
+                <label for="description">Description</label>
+                <input type="text" name="description" id="description" placeholder="Desciption..." ngModel>
+              </div>
+            </div>
+            <div class="col-md-6 graphicdesign illustrator photography">
+              <div class="form-group">
+                <label for="img">Image Url</label>
+                <input type="text" name="img" id="img" placeholder="url..." ngModel>
+              </div>
+            </div>
+            <div class="col-md-6 graphicdesign illustrator photography">
+              <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12">
+                <div class="text-right">
+                  <button type="submit" value="submit" class="btn btn-primary">Submit</button>
+                </div>
+              </div>
+            </div>
+          </form>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
+
