--- a/frontend/frontend/src/app/components/book/book.component.html
+++ b/frontend/frontend/src/app/components/book/book.component.html
@@ -26,7 +26,10 @@
                 <div class="col"><a href="https://www.google.com/search?q={{book.name}}"
                     class="btn btn-xs btn-outline btn-primary">More Info <i class="fa fa-long-arrow-right"></i> </a>
                 </div>
-                <div class="col"><a class="btn btn-xs btn-outline btn-primary" href="/createRequest">Request</a> </div>
+               <!-- <div class="col"><a class="btn btn-xs btn-outline btn-primary" href="/createRequest">Request</a> </div> -->
+               <div class="col">
+                <button class="btn btn-xs btn-outline btn-primary" (click)="navigateToRequest(book.id)">Request</button>
+              </div>
               </div>
             </div>
           </div>
@@ -35,3 +38,5 @@
     </div>
   </div>
 </div>
+
+
