--- a/frontend/frontend/src/app/components/user-profile/user-profile.component.html
+++ b/frontend/frontend/src/app/components/user-profile/user-profile.component.html
@@ -1,67 +1,84 @@
 <app-header>
 </app-header>
 
-<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
-<div class="content">
-  <div class="container">
-    <div class="row">
-      <!-- end col -->
-    </div>
-    <!--<div *ngIf="user != undefined" class="container"> -->
-    <div class="row">
-      <div class="col-lg-4">
-        <div class="text-center card-box">
-          <div class="member-card pt-2 pb-2">
-            <div class="thumb-lg member-thumb mx-auto"><img
-                src="https://upload.wikimedia.org/wikipedia/commons/7/7c/Profile_avatar_placeholder_large.png"
-                class="rounded-circle img-thumbnail" alt="profile-image"></div>
-            <div class="">
-              <h4 class="text-dark">{{user.fullName}}</h4>
-              <p class="text-muted">username: <span>| </span><span><a href="#"
-                    class="text-pink">{{user.username}}</a></span></p>
-            </div>
-            <ul class="social-links list-inline">
-              <li class="list-inline-item"><a title="" data-placement="top" data-toggle="tooltip" class="tooltips"
-                  href="" data-original-title="Facebook"><i class="fa fa-facebook"></i></a></li>
-              <li class="list-inline-item"><a title="" data-placement="top" data-toggle="tooltip" class="tooltips"
-                  href="" data-original-title="Twitter"><i class="fa fa-twitter"></i></a></li>
-              <li class="list-inline-item"><a title="" data-placement="top" data-toggle="tooltip" class="tooltips"
-                  href="" data-original-title="Skype"><i class="fa fa-skype"></i></a></li>
-            </ul>
-            <span>
-              <a type="button" class="btn btn-primary mt-3 btn-rounded waves-effect w-md waves-light"
-                href="user/edit-profile">Edit Profile</a>
-            </span>
-            <br>
-            <span>
-              <a type="button" class="btn btn-primary mt-3 btn-rounded waves-effect w-md waves-light"
-                href="user/myBooks">My Books</a>
-            </span>
-            <div class="mt-4">
-              <div class="row">
-                <div class="col-4">
-                  <div class="mt-3">
-                    <h4>{{user.state}}</h4>
-                    <p class="mb-0 text-muted">State</p>
-                  </div>
-                </div>
-                <div class="col-4">
-                  <div class="mt-3">
-                    <h4>{{user.city}}</h4>
-                    <p class="mb-0 text-muted">City</p>
-                  </div>
-                </div>
-                <div class="col-4">
-                  <div class="mt-3">
-                    <h4>Address</h4>
-                    <p class="mb-0 text-muted">{{user.address}}</p>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
 
+
+  <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
+<div class="container">
+    <div class="row">
+        <div class="col-lg-3 col-md-4">
+            <div class="text-center card-box">
+                <div class="member-card">
+                    <div class="thumb-xl member-thumb m-b-10 center-block">
+                        <img src="https://upload.wikimedia.org/wikipedia/commons/7/7c/Profile_avatar_placeholder_large.png" class="img-circle img-thumbnail" alt="profile-image">
+                    </div>
+
+                    <div class="">
+                        <h4 class="m-b-5">{{user.fullName}}</h4>
+                        <p class="text-muted">{{user.username}}</p>
+                    </div>
+                    <div class="text-left m-t-40">
+                        <p class="text-muted font-13"><strong>State :</strong><span class="m-l-15">{{user.state}}</span></p>
+                        <p class="text-muted font-13"><strong>City :</strong> <span class="m-l-15">{{user.city}}</span></p>
+                        <p class="text-muted font-13"><strong>Address :</strong> <span class="m-l-15">{{user.address}}</span></p>
+                    </div>
+
+                    <ul class="social-links list-inline m-t-30">
+                        <li>
+                            <a title="" data-placement="top" data-toggle="tooltip" class="tooltips" href="" data-original-title="Facebook"><i class="fa fa-facebook"></i></a>
+                        </li>
+                        <li>
+                            <a title="" data-placement="top" data-toggle="tooltip" class="tooltips" href="" data-original-title="Twitter"><i class="fa fa-twitter"></i></a>
+                        </li>
+                        <li>
+                            <a title="" data-placement="top" data-toggle="tooltip" class="tooltips" href="" data-original-title="Skype"><i class="fa fa-skype"></i></a>
+                        </li>
+                    </ul>
+                </div>
+            </div> <!-- end card-box -->
+
+
+        </div> <!-- end col -->
+
+
+        <div class="col-md-8 col-lg-9">
+            <div class="">
+                <div class="">
+                    <ul class="nav nav-tabs navtab-custom">
+                        <li class="">
+                            <a href="/addBook" data-toggle="tab" aria-expanded="false">
+                                <span class="visible-xs"><i class="fa fa-plus-square"></i></span>
+                                <span class="hidden-xs"> ADD BOOK</span>
+                            </a>
+                        </li>
+                        <li class="">
+                            <a href="user/edit-profile" data-toggle="tab" aria-expanded="true">
+                                <span class="visible-xs"><i class="fa fa-cog"></i></span>
+                                <span class="hidden-xs"> EDIT PROFILE</span>
+                            </a>
+                        </li>
+                        <li class="">
+                            <a href="/user/myRequests" data-toggle="tab" aria-expanded="false">
+                                <span class="visible-xs"><i class="fa fa-send"></i></span>
+                                <span class="hidden-xs"> MY REQUESTS</span>
+                            </a>
+                        </li>
+                        <li class="">
+                          <a href="/user/incomingRequests" data-toggle="tab" aria-expanded="false">
+                              <span class="visible-xs"><i class="fa fa-envelope"></i></span>
+                              <span class="hidden-xs"> INCOMING REQUESTS</span>
+                          </a>
+                      </li>
+                    </ul>
+                    <div class="tab-content">
+
+                        <div class="tab-pane active" id="profile">
+                            <app-my-books></app-my-books>
+                        </div>
+
+                </div>
+            </div>
+        </div> <!-- end col -->
     </div>
-  </div>
+    <!-- end row -->
+</div>
